--- a/2_3/base.css
+++ b/2_3/base.css
@@ -40,6 +40,7 @@ body {
 /* 上の部分は気にせずここから書く */
 
 #button {
+  transition: margin 2s ease-out;
   width: 320px;
   height: 180px;
   background-color: #fdd;
@@ -50,4 +51,9 @@ body {
   line-height: 180px;
   font-size: 30px;
   text-align: center;
+}
+
+#button.clicked {
+  margin-bottom: 300px;
+  margin-right: 500px;
 }
